fixed z-index of header and incremented revision

--- a/bitrix/templates/main/styles/src/header.less
+++ b/bitrix/templates/main/styles/src/header.less
@@ -12,7 +12,7 @@ html body header {
 	color: @lightContentColor;
 	overflow: hidden;
 	.fixed(0, auto, auto, 0);
-	z-index: 10;
+	z-index: 100;
 
 	.logo {
 		display: block;
