--- a/bitrix/templates/main/styles/src/variables.less
+++ b/bitrix/templates/main/styles/src/variables.less
@@ -11,7 +11,7 @@
 @fontsPrefix: '@{tplPath}fonts/';
 
 // for images and fonts
-@revision: 4;
+@revision: 5;
 
 /* === SIZES === */
 
